[package]
name = "playground-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
gloo-net = "0.2.3"
gloo-storage = "0.2.1"
js-sys = "0.3.58"
log = "0.4.17"
playground-common = { path = "../common" }
serde = { version = "1.0.139", features = ["derive"] }
sycamore = { version = "0.8.0-beta.7", features = ["suspense"] }
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = ["KeyboardEvent", "UrlSearchParams", "HtmlDocument", "HtmlIFrameElement"] }
