[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
gloo = "0.8.0"
js-sys = "0.3.60"
log = "0.4.17"
serde = "1.0.145"
sycamore = { version = "0.8.2", features = ["serde", "suspense", "ssr"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"

# Optimize dependencies by default.
[profile.dev.package."*"]
opt-level = 3

# WASM debug is limited so don't produce so much debug info.
[profile.dev]
debug = 1
