[package]
name = "playground-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = { version = "0.5.13", features = ["json", "form"] }
base64 = "0.13.0"
bincode = "1.3.3"
once_cell = "1.13.0"
playground-common = { path = "../common" }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.3.4", features = ["cors"] }
